fixed scrollbar in editor

--- a/src/components/Editor/Editor.styles.scss
+++ b/src/components/Editor/Editor.styles.scss
@@ -4,6 +4,12 @@
   border: 1px solid red;
 }
 
+.editor {
+  .slider {
+    border-radius: 4px;
+  }
+}
+
 .errorLine {
   background: $secondary-red;
   opacity: 0.65;
